--- a/styles/global.css
+++ b/styles/global.css
@@ -13,4 +13,9 @@ body {
 canvas {
     position: relative;
   }
- 
+.navigation {
+  font-size: 50px;
+  color:#F7825E;
+  text-shadow: 1px 1px 2px black;
+  text-align: center;
+}
