--- a/styles/global.css
+++ b/styles/global.css
@@ -19,3 +19,10 @@ canvas {
   text-shadow: 1px 1px 2px black;
   text-align: center;
 }
+input[type="text" i] {
+  color: #518D34;
+  width: 50%;
+  height: 50px;
+  border:8px solid #518D34;
+  background-color: #55BB25;
+}
