add padding to cards

--- a/styles/global.css
+++ b/styles/global.css
@@ -43,10 +43,11 @@ canvas {
 
 .card > img {
     border:8px solid black;
+    width:50%
   }
 .cards {
     display: grid;
-    grid-gap: 4em;
+    padding: 4em;
     grid-template-columns: repeat(4,1fr);
 }
 
