add logic for parsing episode data

--- a/styles/global.css
+++ b/styles/global.css
@@ -97,7 +97,7 @@ input{
   padding: 0;
 }
 
-.LocationResults >.header {
+.LocationResults >.header, .EpisodeResults >.header {
   display: flex;
   justify-content: center;
   align-items: center;
