--- a/styles/global.css
+++ b/styles/global.css
@@ -193,14 +193,14 @@ input{
   overflow: auto;
   height: 100%;
 }
-@media only screen and (min-width: 320px) and (max-width: 425px) {
+@media only screen and (min-width: 320px) and (max-width: 500px) {
     body {
       overflow: hidden;
     }
     canvas#cnv {
       height: 15em
     }
-    .navigation{
+    .navigation {
       font-size: 4em;
       display:flex;
       text-align: center;
@@ -227,6 +227,44 @@ input{
     .cards {
       display: grid;
       grid-template-rows: max-content;
+    }
+    .ImgContainer {
+      display:flex;
+      flex-direction: column;
+      justify-content: space-between;
+    }
+  }
+  @media only screen and (min-width: 600px) and (max-width: 1000px) {
+    body {
+      font-size: 16px; 
+    }
+    .ImgContainer {
+      padding: 0 auto;
+      display: flex;
+      justify-content: space-between;
+    }
+    button{
+      padding: 2em 3em 3em 3em;
+      font-size: 20px;
+      color:white;
+      margin: 1.4em 1em;
+    }
+    .search-form {
+      display:grid;
+      grid-template-columns: 2fr 1fr;
+    }
+    .search-form input{
+      width:22em;
+      height: 5em;
+      margin: 1em 12em;
+    }
+    .navigation{
+      display:flex;
+      text-align: center;
+      align-items: center;
+      gap: 10px;
+      justify-content: space-between;
+      margin: 1em 7em;
     }
   }
  
