--- a/styles/global.css
+++ b/styles/global.css
@@ -145,7 +145,9 @@ input{
 .grid-container {
   float: right;
 }
-
+.search-form.invalid input {
+  border: 6px solid red;
+}
 .Results {
   display: grid;
   margin: 1em 14em;
