--- a/styles/global.css
+++ b/styles/global.css
@@ -73,9 +73,11 @@ canvas {
 .details{
   display: grid;
   grid-template-rows: repeat(5,1fr);
+  font-size: small;
 }
 .value{
   color: #AC3131;
+  font-size: small;
 }
 .headername {
   font-size: 22px;
@@ -115,13 +117,13 @@ input{
 }
 .modal-content{
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+  grid-template-columns: repeat(6,1fr);
   border:8px solid black;
-  column-gap: 1px;
 }
 .modal-content >img{
   border:8px solid black;
   margin: 0 auto;
+  width: 90%
 }
 .grid-container > .name {
   color: #AC3131;
@@ -213,6 +215,13 @@ input{
 .page {
   overflow: auto;
   height: 100%;
+}
+.post-button,.close-button{
+  font-size: small;
+  color:#ffffff;
+  width: 40%;
+  display: grid;
+  grid-template-rows: 1fr 1fr;
 }
 @media only screen and (min-width: 320px) and (max-width: 500px) {
     body {
