--- a/styles/global.css
+++ b/styles/global.css
@@ -65,11 +65,41 @@ canvas {
     margin: 1em 4em;
     grid-template-columns: repeat(4,1fr);
 }
-
+.character-modal {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 1000; 
+  background-color: white; 
+  padding: 20px;
+  border: 1px solid #ccc;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+}
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); 
+  z-index: 999; 
+  display: none; 
+}
+.body-modal-open {
+  overflow: hidden; 
+}
+.character-modal, .modal-overlay {
+  transition: opacity 0.3s ease-in-out;
+}
+.body-modal-open .modal-overlay,
+.body-modal-open .character-modal {
+  display: block;
+  opacity: 1;
+}
 .ResultName{
   color: #AC3131;
 }
-
 .details{
   display: grid;
   grid-template-rows: repeat(5,1fr);
